# study

./: CMakeLists.txt
00/: 01.c  02.c  03.c  04.c
day01/: aaa.c  aab.c  aac.c  aad.c
day02/: aae.c  aaf.c  aag.c  aah.c
day03/: aai.c  aaj.c
day04/: aak.c  aal.c  aam.c
day05/: aan.c  aao.c  aap.c  aaq.c  aar.c  aas.c  aat.c  aau.c
day06/: aav.c  aaw.c
day07/: aax.c  aay.c  aaz.c
day08/: aba.c
day09/: abb.c  abc.c
day10/: abd.c  abe.c  abf.c
day11/: abg.c  abh.c  abi.c  abj.c  abk.c  abl.c  abm.c
day12/: abn.c  abo.c  abp.c  abq.c  abr.c  abs.c  abt.c
day13/: abu.c  abv.c
